# CM3070_final_project

./: .gitignore  CM3070_final_project  CMakeCache.txt  CMakeLists.txt  EVALUATION.md  INSTALL.md  LICENSE.md  Makefile  README.md  cmake_install.cmake  main.cpp
data/: README.md
include/: counter.h  detector.h  io.h  tracker.h
scripts/: download_model.sh
src/: counter.cpp  detector.cpp  io.cpp  main.cpp  tracker.cpp
tests/: test_counter.cpp
